# specular

./: CMakeLists.txt
examples/: specular_example.cpp  specular_example_fast.cpp
include/: newton.h  specular.h  specular_functions.h
